# sesgo_framework

./: README.md
gms-cv/: playground.py  pyproject.toml
gms-cv/experiments/: 01_reweighing_demo.py
gms-cv/models/: modelo_selector_cv.joblib
gms-cv/reports/: auditoria_genero.csv  explicabilidad_global.csv  metrics.txt  metrics_genero.txt
gms-cv/src/: audit_genero.py  choose_threshold.py  explain_global.py  infer_batch.py  load_data.py  make_dataset_adult.py  metrics_genero.py  train.py
gms-cv/src/gsmfair/: __init__.py
gms-cv/src/gsmfair.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gms-cv/src/gsmfair/metrics/: __init__.py  demographic_parity.py  equal_opportunity.py
gms-cv/src/gsmfair/mitigation/: __init__.py  helpers.py  postprocessing.py  reweighting.py  shortcuts.py
